--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint": "^9.4.0"
   },
   "dependencies": {
+    "@eslint/js": "^9.4.0",
     "eslint-plugin-import-x": "^0.5.1",
     "eslint-plugin-jest-dom": "^5.4.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
@@ -67,6 +68,7 @@
   "devDependencies": {
     "@changesets/changelog-github": "0.5.0",
     "@changesets/cli": "2.27.5",
+    "@types/eslint__js": "8.42.3",
     "@wkovacs64/prettier-config": "4.0.0",
     "eslint": "9.4.0",
     "prettier": "3.3.0",
