--- a/renovate.json
+++ b/renovate.json
@@ -6,7 +6,7 @@
   ],
   "commitMessageTopic": "{{depName}}",
   "automergeType": "branch",
-  "automerge": true,
+  "automerge": false,
   "major": {
     "automerge": false
   },
