--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-testing-library": "^6.2.2",
     "eslint-plugin-vitest": "^0.5.4",
     "globals": "^15.3.0",
+    "resolve-from": "5.0.0",
     "typescript-eslint": "^8.0.0-alpha.20"
   },
   "devDependencies": {
