--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "node": "^18.18.0 || >=20.0.0"
   },
   "dependencies": {
+    "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.7.0",
     "eslint-plugin-import-x": "^3.0.1",
     "eslint-plugin-jest-dom": "^5.4.0",
