--- a/package.json
+++ b/package.json
@@ -50,18 +50,18 @@
     "node": "^18.18.0 || >=20.0.0"
   },
   "dependencies": {
-    "@eslint/compat": "^1.1.1",
-    "@eslint/js": "^9.7.0",
-    "eslint-plugin-import-x": "^4.0.0",
+    "@eslint/compat": "~1.1.1",
+    "@eslint/js": "^9.12.0",
+    "eslint-plugin-import-x": "^4.3.1",
     "eslint-plugin-jest-dom": "^5.4.0",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-playwright": "^1.6.2",
-    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-playwright": "^1.7.0",
+    "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-testing-library": "^6.2.2",
+    "eslint-plugin-testing-library": "^6.3.0",
     "@vitest/eslint-plugin": "^1.1.7",
-    "globals": "^15.8.0",
-    "typescript-eslint": "^8.0.0-alpha.41"
+    "globals": "^15.11.0",
+    "typescript-eslint": "^8.9.0"
   },
   "devDependencies": {
     "@changesets/changelog-github": "0.5.0",
