--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "@eslint/js": "^9.28.0",
     "@vitest/eslint-plugin": "^1.2.1",
+    "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-import-x": "^4.15.0",
     "eslint-plugin-jest-dom": "^5.5.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
