--- a/renovate.json
+++ b/renovate.json
@@ -6,6 +6,13 @@
   "major": {
     "automerge": false
   },
+  "packageRules": [
+    {
+      "matchPackageNames": ["typescript"],
+      "matchUpdateTypes": ["minor"],
+      "automerge": false
+    }
+  ],
   "prConcurrentLimit": 0,
   "prHourlyLimit": 0
 }
