--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   ],
   "homepage": "https://github.com/wKovacs64/eslint-config#readme",
   "repository": {
-    "type": "git",
-    "url": "https://github.com/wKovacs64/eslint-config.git"
+    "url": "git+https://github.com/wKovacs64/eslint-config.git"
   },
   "bugs": {
     "url": "https://github.com/wKovacs64/eslint-config/issues"
