--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "scripts": {
     "changeset": "changeset",
-    "changeset:version": "changeset version && npm install --package-lock-only",
+    "changeset:version": "changeset version && pnpm install",
     "changeset:publish": "changeset publish",
     "format": "prettier --cache --write .",
     "format:check": "prettier --cache --check .",
@@ -48,6 +48,7 @@
   "engines": {
     "node": "^18.18.0 || >=20.0.0"
   },
+  "packageManager": "pnpm@10.25.0",
   "dependencies": {
     "@eslint/js": "^9.39.0",
     "@vitest/eslint-plugin": "^1.4.0",
