--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/setup-node@v6
         with:
           cache: pnpm
-          node-version-file: '.nvmrc'
+          node-version-file: ".nvmrc"
 
       - name: 📥 Install deps
         run: pnpm install
@@ -49,7 +49,7 @@ jobs:
         uses: actions/setup-node@v6
         with:
           cache: pnpm
-          node-version-file: '.nvmrc'
+          node-version-file: ".nvmrc"
 
       - name: 📥 Install deps
         run: pnpm install
@@ -71,7 +71,7 @@ jobs:
         uses: actions/setup-node@v6
         with:
           cache: pnpm
-          node-version-file: '.nvmrc'
+          node-version-file: ".nvmrc"
 
       - name: 📥 Install deps
         run: pnpm install
@@ -93,7 +93,7 @@ jobs:
         uses: actions/setup-node@v6
         with:
           cache: pnpm
-          node-version-file: '.nvmrc'
+          node-version-file: ".nvmrc"
 
       - name: 📥 Install deps
         run: pnpm install
@@ -127,7 +127,7 @@ jobs:
         uses: actions/setup-node@v6
         with:
           cache: pnpm
-          node-version-file: '.nvmrc'
+          node-version-file: ".nvmrc"
 
       - name: 📥 Install deps
         run: pnpm install
@@ -138,7 +138,7 @@ jobs:
         with:
           version: pnpm run changeset:version
           publish: pnpm run changeset:publish
-          commit: 'chore: release'
-          title: 'chore: release'
+          commit: "chore: release"
+          title: "chore: release"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
