--- a/package.json
+++ b/package.json
@@ -1,35 +1,39 @@
 {
   "name": "@wkovacs64/eslint-config",
   "version": "7.14.0",
+  "private": false,
   "description": "@wKovacs64 ESLint config",
   "keywords": [
     "eslint",
-    "eslintconfig",
-    "eslintplugin",
     "eslint-config",
     "eslint-plugin",
+    "eslintconfig",
+    "eslintplugin",
     "wkovacs64"
   ],
+  "homepage": "https://github.com/wKovacs64/eslint-config#readme",
+  "bugs": {
+    "url": "https://github.com/wKovacs64/eslint-config/issues"
+  },
+  "license": "MIT",
   "author": {
     "name": "Justin Hall",
     "email": "justin.r.hall@gmail.com"
   },
-  "license": "MIT",
+  "repository": {
+    "url": "git+https://github.com/wKovacs64/eslint-config.git"
+  },
+  "files": [
+    "index.js"
+  ],
   "type": "module",
   "main": "index.js",
   "exports": {
     ".": "./index.js",
     "./package.json": "./package.json"
   },
-  "files": [
-    "index.js"
-  ],
-  "homepage": "https://github.com/wKovacs64/eslint-config#readme",
-  "repository": {
-    "url": "git+https://github.com/wKovacs64/eslint-config.git"
-  },
-  "bugs": {
-    "url": "https://github.com/wKovacs64/eslint-config/issues"
+  "publishConfig": {
+    "access": "public"
   },
   "scripts": {
     "changeset": "changeset",
@@ -40,14 +44,6 @@
     "lint": "eslint .",
     "typecheck": "tsc"
   },
-  "private": false,
-"publishConfig": {
-    "access": "public"
-  },
-  "engines": {
-    "node": "^18.18.0 || >=20.0.0"
-  },
-  "packageManager": "pnpm@10.30.1",
   "dependencies": {
     "@eslint/js": "^9.39.3",
     "@vitest/eslint-plugin": "^1.6.9",
@@ -71,5 +67,9 @@
     "eslint": "^9.39.3",
     "oxfmt": "0.35.0",
     "typescript": "5.9.3"
-  }
+  },
+  "engines": {
+    "node": "^18.18.0 || >=20.0.0"
+  },
+  "packageManager": "pnpm@10.30.1"
 }
